@@ -1,3 +1,15 @@
+Thu Dec  3 23:54:56 UTC 2009  Mike Martinez  <martinez_m@ociweb.com>
+
+        * tools/odds_monitor/MonitorData.h:
+        * tools/odds_monitor/MonitorData.cpp:
+        * tools/odds_monitor/MonitorDataStorage.inl:
+        * tools/odds_monitor/Monitor_main.cpp:
+        * tools/odds_monitor/monitor.conf:
+
+          Updated to publish instrumentation topics from the application
+          for testing.  Removed stub data since we are now receiving
+          real instrumentation data (and even displaying some of it).
+
 Thu Dec  3 23:49:54 UTC 2009  Steven Stallion  <stallions@ociweb.com>
 
         * dds/DCPS/transport/multicast/ReliableMulticast.cpp:
